force-app/main/default/objects/LLC_BI__Collateral_Type__c/LLC_BI__Collateral_Type__c.object-meta.xml
<CustomObject>
    <description>The type of a piece of Collateral.</description>
    <label>Collateral Type</label>
    <nameField>
        <label>Collateral Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collateral Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>