force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/Data_Migration_Collateral_Code__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Collateral_Code__c</fullName>
    <description>Collateral Code used for Data Migration purposes</description>
    <label>Data Migration Collateral Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>