force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Collateral_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Code__c</fullName>
    <description>This field is manually populated. The code for a piece of Collateral.</description>
    <inlineHelpText>The code for a piece of Collateral.</inlineHelpText>
    <label>Collateral Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>