force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Collateral_Configuration__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Configuration__c</fullName>
    <description>This field is manually populated. It holds the configuration data for the complex collateral user interface. It will contain information about screen to function mappings and field set types to use for collateral copy and cloning operations.</description>
    <inlineHelpText>Complex Collateral configuration and control data</inlineHelpText>
    <label>Collateral Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>