force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Expire_Date__c</fullName>
    <description>This field is manually populated. The date that this type of collateral is no longer valid.</description>
    <inlineHelpText>The date that this type of collateral is no longer valid.</inlineHelpText>
    <label>Expire Date</label>
    <type>Date</type>
</CustomField>