force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Field_Set__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Field_Set__c</fullName>
    <description>This field is manually populated. Determines the field set that is used for this Collateral Type on the Manage Collateral Page</description>
    <inlineHelpText>Determines the field set that is used for this Collateral Type on the Manage Collateral Page</inlineHelpText>
    <label>Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>