force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Highest_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Highest_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field is optional and is used to select the highest level parent record in a hierarchy for the Collateral Type record.</description>
    <label>Highest Type</label>
    <referenceTo>LLC_BI__Collateral_Type__c</referenceTo>
    <relationshipLabel>Collateral Types (Highest Type)</relationshipLabel>
    <relationshipName>HighestTypes</relationshipName>
    <type>Lookup</type>
</CustomField>