force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Icon_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Icon_Background_Color__c</fullName>
    <description>Defines the hexadecimal color for the background of the Icon.</description>
    <inlineHelpText>Please enter a hexadecimal color.</inlineHelpText>
    <label>Icon Background Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>