force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Icon_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Icon_Type__c</fullName>
    <description>Defines the icon type for this record. The entry must include the following pattern: folderName/iconName. For example to display the &quot;client&quot; icon from the standard folder enter &apos;standard/client&apos;.</description>
    <inlineHelpText>Please enter the icon folder name then a &quot;/&quot; followed by the icon name. Example &quot;standard/client&quot;</inlineHelpText>
    <label>Icon Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>