force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Parent_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field is optional and is used to select a parent record for the Collateral Type record. Information provided on a child record rolls up to the parent collateral for valuation.</description>
    <label>Parent Type</label>
    <referenceTo>LLC_BI__Collateral_Type__c</referenceTo>
    <relationshipLabel>Collateral Types</relationshipLabel>
    <relationshipName>Parent_Types</relationshipName>
    <type>Lookup</type>
</CustomField>