force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Regulatory_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Regulatory_Rate__c</fullName>
    <description>This field is manually populated. Regulatory Advance Rate, typically used for real estate. An advance rate above this will require specific reporting.</description>
    <inlineHelpText>Regulatory Advance Rate, typically used for real estate. An advance rate above this will require specific reporting.</inlineHelpText>
    <label>Regulatory Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>