force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Screen__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Screen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Administrators populate this optional text field with the screen that displays when users add or edit collateral on a loan.</description>
    <label>Screen</label>
    <referenceTo>nFORCE__Screen__c</referenceTo>
    <relationshipLabel>Collateral Types</relationshipLabel>
    <relationshipName>Collateral_Types</relationshipName>
    <type>Lookup</type>
</CustomField>