force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Start_Date__c</fullName>
    <description>This field is manually populated. The date the collateral type was put into effect.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>