force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Valuation_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Valuation_Field_Set__c</fullName>
    <description>System administrators manually populate this text field to capture the API name of the field set that appears on a valuation record for a particular collateral type.</description>
    <inlineHelpText>Enter the desired field set&apos;s API name in this field. This field set must exist on the collateral valuation object. If blank, the system uses the default field set for valuation creation.</inlineHelpText>
    <label>Valuation Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>