force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLC_BI__Valuation_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Valuation_Type__c</fullName>
    <description>A picklist field used to capture the potential types of collateral valuation. This would be entered by the user when a new valuation is entered. No default value.</description>
    <inlineHelpText>The potential types of collateral valuation</inlineHelpText>
    <label>Valuation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual Cash Value</fullName>
            </value>
            <value>
                <fullName>As Complete Value</fullName>
            </value>
            <value>
                <fullName>As Is Value</fullName>
            </value>
            <value>
                <fullName>As Stabilized Value</fullName>
            </value>
            <value>
                <fullName>Balance Sheet</fullName>
            </value>
            <value>
                <fullName>Book Value</fullName>
            </value>
            <value>
                <fullName>Cash Balance</fullName>
            </value>
            <value>
                <fullName>Contents Value</fullName>
            </value>
            <value>
                <fullName>Fair Market Value - Real Estate</fullName>
            </value>
            <value>
                <fullName>Fair Market Value - Equipment / Transportation</fullName>
            </value>
            <value>
                <fullName>Net Orderly Liquidation Value</fullName>
            </value>
            <value>
                <fullName>Orderly Liquidation Value</fullName>
            </value>
            <value>
                <fullName>Preliminary Value</fullName>
            </value>
            <value>
                <fullName>Purchase Price</fullName>
            </value>
            <value>
                <fullName>Replacement Cost Value</fullName>
            </value>
            <value>
                <fullName>Waived Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>