force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/LLCLP__Is_Excluded_From_LaserPro_Extract__c.field-meta.xml
<CustomField>
    <fullName>LLCLP__Is_Excluded_From_LaserPro_Extract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Excluded Collateral Type from LaserPro extract</description>
    <inlineHelpText>Excluded Collateral Type from LaserPro extract</inlineHelpText>
    <label>Exclude From LaserPro Extract</label>
    <type>Checkbox</type>
</CustomField>