force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/nPortal__OA_Collateral_Image__c.field-meta.xml
<CustomField>
    <fullName>nPortal__OA_Collateral_Image__c</fullName>
    <description>Populate this field with the URL for the image that should display in online applications for this collateral type.</description>
    <inlineHelpText>For an image hosted online, use the image URL. Alternately, upload an image to Documents, make image visibility public, and populate the field with the image URL.</inlineHelpText>
    <label>OA Collateral Image</label>
    <length>2083</length>
    <type>LongTextArea</type>
</CustomField>