force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/nPortal__OA_Collateral_Name__c.field-meta.xml
<CustomField>
    <fullName>nPortal__OA_Collateral_Name__c</fullName>
    <description>Populate this text field with the name of the collateral type that should be exposed to the customer. If you do not populate this field, the internal name of the collateral type is exposed to the external Customer Portal user.</description>
    <label>OA Collateral Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>