force-app/main/default/objects/LLC_BI__Collateral_Type__c/fields/nPortal__OA_Collateral_Type_Screen__c.field-meta.xml
<CustomField>
    <fullName>nPortal__OA_Collateral_Type_Screen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup field. The collateral type defines the screen that appears. This field looks up to the Screen object to determine which fields to display per selected collateral type; these fields are used to collect information from the Customer Portal user.</description>
    <label>OA Collateral Type Screen</label>
    <referenceTo>nFORCE__Screen__c</referenceTo>
    <relationshipLabel>OA Collateral Type Screens</relationshipLabel>
    <relationshipName>OA_Collateral_Type_Screen</relationshipName>
    <type>Lookup</type>
</CustomField>