force-app/main/default/objects/LLC_BI__Collateral_Type__c/validationRules/LLC_BI__Advance_Rate_should_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__Advance_Rate_should_not_be_null</fullName>
    <active>true</active>
    <description>Advance Rate should not be null.</description>
    <errorConditionFormula>ISNULL(LLC_BI__Advance_Rate__c)</errorConditionFormula>
    <errorMessage>Please enter an advance rate for the collateral type.</errorMessage>
</ValidationRule>